--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,12 +12,26 @@ jobs:
 
         run: |
           FRONT_IMG_TAG=$(sha256sum package.json | cut -c1-15)
-          RES=$(curl -u mdnfiras:$DOCKER_TOKEN https://registry.hub.docker.com/v2/repositories/mdnfiras/my-angular-base/tags | { grep $FRONT_IMG_TAG || true; } )
+          RES=$(curl -u mdnfiras:$DOCKER_TOKEN https://registry.hub.docker.com/v2/repositories/mdnfiras/my-resume-base/tags | { grep $FRONT_IMG_TAG || true; } )
           if [ -z "$RES" ]; then
               echo "Did not find image with tag $FRONT_IMG_TAG"
               docker login -u mdnfiras -p $DOCKER_TOKEN
-              docker build -f base.Dockerfile -t mdnfiras/my-angular-base:$FRONT_IMG_TAG .
-              docker push mdnfiras/my-angular-base:$FRONT_IMG_TAG
+              docker build -f base.Dockerfile -t mdnfiras/my-resume-base:$FRONT_IMG_TAG .
+              docker push mdnfiras/my-resume-base:$FRONT_IMG_TAG
+              docker logout
           else
               echo "Found image with tag $FRONT_IMG_TAG"
           fi
+          
+      - uses: actions/checkout@v2
+      - name: Front end image build
+        env:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+
+        run: |
+          docker login -u mdnfiras -p $DOCKER_TOKEN
+          docker pull mdnfiras/my-resume-base:$FRONT_IMG_TAG
+          docker tag mdnfiras/my-resume-base:$FRONT_IMG_TAG my-resume-base:latest
+          docker build --tag mdnfiras/my-resume:latest .
+          docker push mdnfiras/my-resume:latest
