--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,17 +23,6 @@ jobs:
               echo "Found image with tag $FRONT_IMG_TAG"
           fi
 
-      - name: Front end image build
-        env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
-        run: |
-          FRONT_IMG_TAG=$(sha256sum package.json | cut -c1-15)
-          docker login -u mdnfiras -p $DOCKER_TOKEN
-          docker pull mdnfiras/my-resume-base:$FRONT_IMG_TAG
-          docker tag mdnfiras/my-resume-base:$FRONT_IMG_TAG my-resume-base:latest
-          docker build --tag mdnfiras/my-resume:latest .
-          docker push mdnfiras/my-resume:latest
 
       - name: Github pages
         env:
@@ -41,7 +30,26 @@ jobs:
         run: |
           CONTAINER_ID=$(docker run -d mdnfiras/my-resume:latest )
           docker cp $CONTAINER_ID:/usr/share/nginx/html .
-          ls html
-          cd html
-          pwd
-          exit 0
+          docker stop $CONTAINER_ID
+          repo_uri="https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+          remote_name="origin"
+          main_branch="main"
+          target_branch="gh-pages"
+          build_dir="dist"
+
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "${GITHUB_ACTOR}@bots.github.com"
+
+          git checkout "$target_branch"
+          git rebase "${remote_name}/${main_branch}"
+
+          git add "html/*"
+
+          git commit -m "updated GitHub Pages"
+          if [ $? -ne 0 ]; then
+              echo "nothing to commit"
+              exit 0
+          fi
+
+          git remote set-url "$remote_name" "$repo_uri" # includes access token
+          git push --force-with-lease "$remote_name" "$target_branch"
