--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,19 @@ jobs:
               echo "Found image with tag $FRONT_IMG_TAG"
           fi
 
+      - name: Front end image build
+        env:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
+        run: |
+          FRONT_IMG_TAG=$(sha256sum package.json | cut -c1-15)
+          docker login -u mdnfiras -p $DOCKER_TOKEN
+          docker pull mdnfiras/my-resume-base:$FRONT_IMG_TAG
+          docker tag mdnfiras/my-resume-base:$FRONT_IMG_TAG my-resume-base:latest
+          docker build --tag mdnfiras/my-resume:latest .
+          docker push mdnfiras/my-resume:latest
+          
       - name: Github pages
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -32,7 +44,6 @@ jobs:
           remote_name="origin"
           main_branch="main"
           target_branch="gh-pages"
-          build_dir="dist"
 
           git config user.name "$GITHUB_ACTOR"
           git config user.email "${GITHUB_ACTOR}@bots.github.com"
@@ -42,7 +53,8 @@ jobs:
           CONTAINER_ID=$(docker run -d mdnfiras/my-resume:latest )
           docker cp $CONTAINER_ID:/usr/share/nginx/html .
           docker stop $CONTAINER_ID
-          git add "html/*"
+          mv html docs
+          git add "docs/*"
           git rm -rf .github
 
           git commit -m "updated GitHub Pages"
