--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,4 +64,4 @@ jobs:
           fi
 
           git remote set-url "$remote_name" "$repo_uri" # includes access token
-          git push --force-with-lease "$remote_name" "$target_branch"
+          git push -f "$remote_name" "$target_branch"
