--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "resume",
   "version": "0.0.0",
+  "engines":{
+    "node": ">=12.0.0",
+    "npm": ">=6.0.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -30,7 +34,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.2",
+    "@angular-devkit/build-angular": "^0.1002.3",
     "@angular/cli": "~10.2.2",
     "@angular/compiler-cli": "~10.2.4",
     "@types/jasmine": "~3.5.0",
