--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "resume",
   "version": "0.0.0",
   "engines":{
-    "node": ">=12.0.0",
-    "npm": ">=6.0.0"
+    "node": "^12",
+    "npm": "^6"
   },
   "scripts": {
     "ng": "ng",
