--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
           docker stop $CONTAINER_ID
           mv html/* .
           rm -rf html
-          echo "gg" > gg.php
+          cp index.html index.php
           git add *
 
           git commit -m "updated GitHub Pages"
